Allow ScriptExecutionContext::addMessage to be called from background threads. https://bugs.webkit.org/show_bug.cgi?id=71575

Patch by Michael Nordman <michaeln@google.coom> on 2011-11-04
Reviewed by Nate Chapin.

No new tests.

* dom/Document.cpp:
(WebCore::Document::addMessage):
* dom/ScriptExecutionContext.cpp:
* dom/ScriptExecutionContext.h:
(WebCore::ScriptExecutionContext::AddConsoleMessageTask::create):
(WebCore::ScriptExecutionContext::AddConsoleMessageTask::performTask):
(WebCore::ScriptExecutionContext::AddConsoleMessageTask::AddConsoleMessageTask):
* workers/WorkerContext.cpp:
(WebCore::WorkerContext::addMessage):

Canonical link: https://commits.webkit.org/87915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99328 268f45cc-cd09-0410-ab3c-d52691b4dbfc